--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@vicons/ionicons5": "^0.12.0",
         "javascript-time-ago": "^2.5.9",
+        "pinia": "^2.0.33",
         "vue": "^3.2.45",
         "vue-router": "^4.1.6"
     }
